# Python_SQL

./: pyproject.toml
srс/: catalog.py  m3_p13_l_2_standart_workflow_app.py  m3_p13_l_3_context_managers_app.py  m3_p13_l_4_requests_app.py  m3_p13_l_5_cursor_factory_app.py  m3_p13_l_6_cursor_transactions_app.py  m3_p13_l_7__dao_app.py  product.py  productdao.py
tests/: m3_p13_l_3_context_managers_app.py  m3_p13_l_3_context_managers_conftest.py
